# anki-collection-editing

./: .gitignore  .pre-commit-config.yaml  ExCloze2Basic.ipynb  README.md  __init__.py  cloze2basic.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: pylint.yml
src/: chinese_utils.py  cloze2basic.py  cloze2basic_main.py  cloze_utils.py  config_example.yaml  constants.py  create_syn_cognat_groups.py  create_syn_cognat_groups_main.py  german_utils.py  hint_generation.py  hint_generation_main copy.py  hint_generation_main.py  hint_generation_utils.py  note_utils.py  utils.py
src/utils/: chinese_utils.py  constants.py  field_utils.py  german_utils.py  hint_generation_utils.py  note_utils.py  utils.py
tests/: test_cloze2basic.py  test_utils.py
