[tool.poetry]
name = "anki-collection-editing"
version = "0.1.0"
description = ""
authors = ["catherning <catherning.xu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anki = "2.1.65"
beautifulsoup4 = "4.12.2"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
decorator = "5.1.1"
distro = "1.8.0"
idna = "3.4"
loguru = "0.7.0"
markdown = "3.4.4"
orjson = "3.9.2"
protobuf = "4.23.4"
pysocks = "1.7.1"
requests = "2.31.0"
soupsieve = "2.4.1"
urllib3 = "2.0.4"
nltk = "^3.8.1"

[tool.poetry.group.languages]

[tool.poetry.group.languages.dependencies]
pinyin-jyutping = "^0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
